[workspace]
resolver = "2"
members = [
  "flux",
  "drift",
]

[workspace.package]
version = "7.0.0"
description = "Drift_V2 — macOS screensaver based on Flux by sandydoo"
edition = "2021"
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/sandydoo/flux/"
authors = ["Sander Melnikov <hey@sandydoo.me"]

[workspace.dependencies.wgpu]
version = "28.0"

[workspace.dependencies.image]
features = ["jpeg", "png"]
version = "0.25"

[workspace.dependencies]
approx = "0.5.1"
bytemuck = { version = "1.4", features = ["derive"] }
flux = { path = "./flux" }
getrandom = "0.4"
glam = "0.32"
log = "0.4"
pollster = "0.4"
rand = { version = "0.10", features = ["thread_rng"] }
rand_pcg = "0.10"
rand_seeder = "0.5"
raw-window-handle = "0.6"
rustc-hash = "2.1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"

# The unoptimized build is too slow
[profile.dev.package.image]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
